--- a/Style.css
+++ b/Style.css
@@ -36,4 +36,36 @@ input[type="submit"] {
 }
 input[type="submit"]:hover {
     opacity: 0.8;
+} 
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+p {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+/* Estilos para el título */
+h2 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 10px;
 }
