--- a/assets/css/estilosm.css
+++ b/assets/css/estilosm.css
@@ -1,5 +1,3 @@
-/* Importing Google font - Poppins */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 * {
     margin: 0;
@@ -11,9 +9,33 @@
 body {
     height: 100vh;
     width: 100%;
-    background-image: url("images/hero-bg.jpg");
+
     background-position: center;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.container {
+    text-align: center;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+
+
+.logo h2 {
+    margin: 0;
+    font-size: 24px;
+    font-weight: normal;
 }
 
 .sidebar {
